# Secure_IPC_Native_Android_Vault

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/vault/: IVaultInterface.aidl
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/vault/: VaultService.java
